--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -7,10 +7,10 @@ metadata:
   namespace: workshop
 
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - name: http
-      port: 8080
+      port: 80
       protocol: TCP
       targetPort: 3000
   selector:
